--- a/cats_presentation/index.html
+++ b/cats_presentation/index.html
@@ -26,7 +26,7 @@
 			<div class="slides">
 				<section>
           <h1>CATS</h1>
-          <h5>Lightweight, modular, and extensible library for functional programming</h5>
+          <h4>Lightweight, modular, and extensible library for functional programming</h4>
         </section>
         <section>
           <h1>Community</h1>
@@ -92,6 +92,14 @@ Process finished with exit code 0
         <section>
           <section>
             <h1>Semigroup</h1>
+            <h4>If a type <u>A</u> can form a <u>Semigroup</u> it has an <u>associative</u> binary operation.</h4>
+          </section>
+          <section>
+            <section>
+              <h1>Associativity</h1>
+              <h2>(1 + 2) + 3 = 1 + (2 + 3)</h2>
+              <h2>(1 * 2) * 3 = 1 * (2 * 3)</h2>
+            </section>
           </section>
         </section>
         <section>
