--- a/cats_presentation/index.html
+++ b/cats_presentation/index.html
@@ -40,6 +40,7 @@
                     <li>Monoid</li>
                 </ul>
                 </li>
+                <li>Next time</li>
             </ul>
         </section>
         <section>
@@ -58,6 +59,14 @@
         </section>
         <section>
             <h1>CODE</h1>
+        </section>
+        <section>
+            <h1>Next time</h1>
+            <ul>
+                <li>Functor</li>
+                <li>Applicative</li>
+                <li>Monad</li>
+            </ul>
         </section>
         <section>
             <section>
